# codex-loop-skill

./: .gitignore  Cargo.toml  README.en.md  README.md
.github/workflows/: build-skill.yml
scripts/: package-skill.sh
skills/codex-loop/: SKILL.md  examples.md
skills/codex-loop/assets/: mcp-config.example.yaml
skills/codex-loop/references/: mcp-setup.md  tools.md  troubleshooting.md
skills/codex-loop/scripts/: setup.sh
src/: approval.rs  main.rs  resources.rs  server.rs  state.rs  sync.rs
