[package]
name = "codex-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server wrapping Codex app-server with project/thread resources and lifecycle tools"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
codex-app-server-sdk = "0.5"
rmcp = { version = "2", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
